src/test/deca/context/invalid/object/badCall7.deca
class A
{
  int x()
  {
    return 7;
  }
}
class X
{
  int a ;
  void m()
  {
    C c = new C();
    B b = new B();
    println(b.x(c));
  }
}
class B extends A
{

}

class C extends X
{
  int x()
  {
    return 4;
  }
}
